--- a/par/altera/up_monitor.qsf
+++ b/par/altera/up_monitor.qsf
@@ -25,15 +25,15 @@
 
 set_global_assignment -name DEVICE Auto
 set_global_assignment -name FAMILY "Cyclone III"
-set_global_assignment -name TOP_LEVEL_ENTITY up_monitor
+set_global_assignment -name TOP_LEVEL_ENTITY up_monitor_wrapper
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 6.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:33:38  JUNE 01, 2009"
 set_global_assignment -name LAST_QUARTUS_VERSION "10.1 SP1"
 set_global_assignment -name ENABLE_ADVANCED_IO_TIMING OFF
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output
 
-set_global_assignment -name VHDL_FILE ../../rtl/up_monitor.vhd
-#set_global_assignment -name VERILOG_FILE ../../rtl/up_monitor.v
+set_global_assignment -name VERILOG_FILE ../../rtl/up_monitor_wrapper.v
+set_global_assignment -name VERILOG_FILE ../../rtl/up_monitor.v
 set_global_assignment -name VERILOG_FILE ../../rtl/altera/virtual_jtag_addr_mask.v
 set_global_assignment -name VERILOG_FILE ../../rtl/altera/virtual_jtag_adda_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/altera/virtual_jtag_adda_trig.v
